--- a/App/Views/site/ocorrencia-agressor-enviar-arquivo.html
+++ b/App/Views/site/ocorrencia-agressor-enviar-arquivo.html
@@ -30,36 +30,38 @@
 
         <br>
 
-        <!--Tabela-->
-        <table class="table table-hover">
-          <tr>
-            <th>ID</th>
-            <th>Nome</th>
-            <th>Arquivo</th>
-            <th>Tipo</th>
-            <th>Opções</th>
-          </tr>
-          {loop="$documento"}
-          {if="$value.status == 0"}
-          <tr>
-            <td>{$value.idArquivo}</td>
-            <td>{$value.nome}</td>
-            <td>{$value.arquivo}</td>
-            <td>{$value.tipo}</td>
-            <td>
-              <a href="{$value.url}" target="_blank" class="btn btn-primary"><i class="fa fa-eye"></i></a>
-              {if="$value.idPessoa != 'null'"}
-              <a href="/ocorrencia-agressor-enviar-arquivo-cadastrar-atualizar/{$idOcorrencia}/{$value.idPessoa}/{$value.idArquivo}" class="btn btn-success"><i class="fa fa-refresh"></i></a>
-              {/if}
-              {if="$value.idInstituicao != 'null'"}
-              <a href="/ocorrencia-agressor-enviar-arquivo-cadastrar-atualizar/{$idOcorrencia}/{$value.idInstituicao}/{$value.idArquivo}" class="btn btn-success"><i class="fa fa-refresh"></i></a>
-              {/if}
-            </td>
-          </tr>
-          {/if}
-          {/loop}
-        </table>
-        <!--Fim Tabela-->
+        <div style="overflow: auto; width: 100%; height: 100%;">
+          <!--Tabela-->
+          <table class="table table-hover">
+            <tr>
+              <th>ID</th>
+              <th>Nome</th>
+              <th>Arquivo</th>
+              <th>Tipo</th>
+              <th>Opções</th>
+            </tr>
+            {loop="$documento"}
+            {if="$value.status == 0"}
+            <tr>
+              <td>{$value.idArquivo}</td>
+              <td>{$value.nome}</td>
+              <td>{$value.arquivo}</td>
+              <td>{$value.tipo}</td>
+              <td>
+                <a href="{$value.url}" target="_blank" class="btn btn-primary"><i class="fa fa-eye"></i></a>
+                {if="$value.idPessoa != 'null'"}
+                <a href="/ocorrencia-agressor-enviar-arquivo-cadastrar-atualizar/{$idOcorrencia}/{$value.idPessoa}/{$value.idArquivo}" class="btn btn-success"><i class="fa fa-refresh"></i></a>
+                {/if}
+                {if="$value.idInstituicao != 'null'"}
+                <a href="/ocorrencia-agressor-enviar-arquivo-cadastrar-atualizar/{$idOcorrencia}/{$value.idInstituicao}/{$value.idArquivo}" class="btn btn-success"><i class="fa fa-refresh"></i></a>
+                {/if}
+              </td>
+            </tr>
+            {/if}
+            {/loop}
+          </table>
+          <!--Fim Tabela-->
+        </div>
       </div>
       <!-- /.box-body -->
     </div>
