--- a/App/Views/site/ocorrencia-responsavel-vitima-lista.html
+++ b/App/Views/site/ocorrencia-responsavel-vitima-lista.html
@@ -30,38 +30,40 @@
 
         <br>
 
-        <!--Tabela-->
-        <table class="table table-hover">
-          <tr>
-            <th>ID</th>
-            <th>Nome</th>
-            <th>CPF</th>
-            <th>Opções</th>
-          </tr>
-          {loop="$responsavel"}
-          {if="$value.isAindaResponsavel == 1"}
-          <tr>
-            <td>{$value.idPessoaResponsavel}</td>
-            <td>{$value.nomeResponsavel}</td>
-            <td>{$value.cpfResponsavel}</td>
-            <td>
-              <a href="/ocorrencia-responsavel-vitima-detalhe/{$value.idVitimasApuracao}/{$value.idOcorrencia}/{$value.idPessoaResponsavel}" class="btn btn-default"><i class="fa fa-bars"></i></a>
-              <a href="/ocorrencia-responsavel-vitima-editar/{$value.idVitimasApuracao}/{$value.idOcorrencia}/{$value.idPessoaResponsavel}" class="btn btn-primary"><i class="fa fa-edit"></i></a>
-              <a onclick="confirmar()" class="btn btn-danger"><i class="fa fa-trash"></i></a>
-            </td>
-          </tr>
-          {/if}
-          <script>
-            function confirmar()
-            {
-              if(confirm("Voce realmente deseja EXCLUIR esse responsável?")){
-                location.href="/ocorrencia-responsavel-vitima-excluir/{$value.idVitimasApuracao}/{$value.idOcorrencia}/{$value.idPessoaResponsavel}";
+        <div style="overflow: auto; width: 100%; height: 100%;">
+          <!--Tabela-->
+          <table class="table table-hover">
+            <tr>
+              <th>ID</th>
+              <th>Nome</th>
+              <th>CPF</th>
+              <th>Opções</th>
+            </tr>
+            {loop="$responsavel"}
+            {if="$value.isAindaResponsavel == 1"}
+            <tr>
+              <td>{$value.idPessoaResponsavel}</td>
+              <td>{$value.nomeResponsavel}</td>
+              <td>{$value.cpfResponsavel}</td>
+              <td>
+                <a href="/ocorrencia-responsavel-vitima-detalhe/{$value.idVitimasApuracao}/{$value.idOcorrencia}/{$value.idPessoaResponsavel}" class="btn btn-default"><i class="fa fa-bars"></i></a>
+                <a href="/ocorrencia-responsavel-vitima-editar/{$value.idVitimasApuracao}/{$value.idOcorrencia}/{$value.idPessoaResponsavel}" class="btn btn-primary"><i class="fa fa-edit"></i></a>
+                <a onclick="confirmar()" class="btn btn-danger"><i class="fa fa-trash"></i></a>
+              </td>
+            </tr>
+            {/if}
+            <script>
+              function confirmar()
+              {
+                if(confirm("Voce realmente deseja EXCLUIR esse responsável?")){
+                  location.href="/ocorrencia-responsavel-vitima-excluir/{$value.idVitimasApuracao}/{$value.idOcorrencia}/{$value.idPessoaResponsavel}";
+                }
               }
-            }
-          </script>
-          {/loop}
-        </table>
-        <!--Fim Tabela-->
+            </script>
+            {/loop}
+          </table>
+          <!--Fim Tabela-->
+        </div>
       </div>
       <!-- /.box-body -->
     </div>
