--- a/App/Views/site/ocorrencia-vitimas-lista.html
+++ b/App/Views/site/ocorrencia-vitimas-lista.html
@@ -19,26 +19,28 @@
       </div>
       <!-- /.box-header -->
       <div class="box-body">
-        <!--Tabela-->
-        <table class="table table-hover">
-          <tr>
-            <th>ID</th>
-            <th>Nome</th>
-            <th>CPF</th>
-            <th>Opções</th>
-          </tr>
-          {loop="$vitimas"}
-          <tr>
-            <td>{$value.idPessoaVitima}</td>
-            <td>{$value.nomeVitima}</td>
-            <td>{$value.cpfVitima}</td>
-            <td>
-              <a href="/ocorrencia-vitimas/{$value.idVitimasApuracao}/{$value.idOcorrencia}" class="btn btn-primary"><i class="fa fa-eye"></i></a>
-            </td>
-          </tr>
-          {/loop}
-        </table>
-        <!--Fim Tabela-->
+        <div style="overflow: auto; width: 100%; height: 100%;">
+          <!--Tabela-->
+          <table class="table table-hover">
+            <tr>
+              <th>ID</th>
+              <th>Nome</th>
+              <th>CPF</th>
+              <th>Opções</th>
+            </tr>
+            {loop="$vitimas"}
+            <tr>
+              <td>{$value.idPessoaVitima}</td>
+              <td>{$value.nomeVitima}</td>
+              <td>{$value.cpfVitima}</td>
+              <td>
+                <a href="/ocorrencia-vitimas/{$value.idVitimasApuracao}/{$value.idOcorrencia}" class="btn btn-primary"><i class="fa fa-eye"></i></a>
+              </td>
+            </tr>
+            {/loop}
+          </table>
+          <!--Fim Tabela-->
+        </div>
       </div>
       <!-- /.box-body -->
     </div>
