--- a/App/Views/site/ocorrencias-reabertas.html
+++ b/App/Views/site/ocorrencias-reabertas.html
@@ -15,33 +15,35 @@
     <div class="box">
       <!-- /.box-header -->
       <div class="box-body">
-        <table id="example1" class="table table-bordered table-striped">
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>Vítima</th>
-              <th>CPF da Vítima</th>
-              <th>Data de Criação</th>
-              <th>Opções</th>
-            </tr>
-          </thead>
+        <div style="overflow: auto; width: 100%; height: 100%;">
+          <table id="example1" class="table table-bordered table-striped">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Vítima</th>
+                <th>CPF da Vítima</th>
+                <th>Data de Criação</th>
+                <th>Opções</th>
+              </tr>
+            </thead>
 
-          <tbody>
-            {loop="$listaOcorrencia"}
-            {if="$value.statusOcorrencia == 2"}
-            <tr>
-              <td>{$value.idOcorrencia}</td>
-              <td>{$value.nomeVitima}</td>
-              <td>{$value.cpfVitima}</td>
-              <td>{$value.dataCriacaoOcorrencia}</td>
-              <td>
-                <a href="/ocorrencia-detalhe/{$value.idOcorrencia}" class="btn btn-default"><i class="fa fa-edit"></i></a>
-              </td>
-            </tr>
-            {/if}
-            {/loop}
-          </tbody>
-        </table>
+            <tbody>
+              {loop="$listaOcorrencia"}
+              {if="$value.statusOcorrencia == 2"}
+              <tr>
+                <td>{$value.idOcorrencia}</td>
+                <td>{$value.nomeVitima}</td>
+                <td>{$value.cpfVitima}</td>
+                <td>{$value.dataCriacaoOcorrencia}</td>
+                <td>
+                  <a href="/ocorrencia-detalhe/{$value.idOcorrencia}" class="btn btn-default"><i class="fa fa-edit"></i></a>
+                </td>
+              </tr>
+              {/if}
+              {/loop}
+            </tbody>
+          </table>
+        </div>
       </div>
       <!-- /.box-body -->
     </div>
