--- a/App/Views/site/usuarios-lista.html
+++ b/App/Views/site/usuarios-lista.html
@@ -16,45 +16,45 @@
     <div class="box">
       <!-- /.box-header -->
       <div class="box-body">
-        
-        <table id="example1" class="table table-bordered table-striped">
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>Nome</th>
-              <th>CPF</th>
-              <th>Cargo</th>
-              <th>Setor</th>
-              <th>Opções</th>
-            </tr>
-          </thead>
+        <div style="overflow: auto; width: 100%; height: 100%;">
+          <table id="example1" class="table table-bordered table-striped">
+            <thead>
+              <tr>
+                <th>ID</th>
+                <th>Nome</th>
+                <th>CPF</th>
+                <th>Cargo</th>
+                <th>Setor</th>
+                <th>Opções</th>
+              </tr>
+            </thead>
 
-          <tbody>
-            {loop="$listaUsuario"}
-            <tr>
-              <td>{$value.idUsuario}</td>
-              <td>{$value.nome}</td>
-              {if="$value.isCpf == '1'"}
-              <td>{$value.cpf}</td>
-              {/if}
-              {if="$value.isCpf == '0'"}
-              <td>{$value.cnpj}</td>
-              {/if}
-              <td>{$value.funcao}</td>
-              <td>{$value.setor}</td>
-              <td>
-                <a href="/usuarios-detalhe/{$value.idUsuario}" class="btn btn-default"><i class="fa fa-edit"></i></a>
-                {if="$value.isBloqueado == 0"}
-                <a href="#" class="btn btn-success"><i class="fa fa-check"></i></a>
-                {else}
-                <a href="#" class="btn btn-danger"><i class="fa fa-ban"></i></a>
+            <tbody>
+              {loop="$listaUsuario"}
+              <tr>
+                <td>{$value.idUsuario}</td>
+                <td>{$value.nome}</td>
+                {if="$value.isCpf == '1'"}
+                <td>{$value.cpf}</td>
                 {/if}
-              </td>
-            </tr>
-            {/loop}
-          </tbody>
-        </table>
-        
+                {if="$value.isCpf == '0'"}
+                <td>{$value.cnpj}</td>
+                {/if}
+                <td>{$value.funcao}</td>
+                <td>{$value.setor}</td>
+                <td>
+                  <a href="/usuarios-detalhe/{$value.idUsuario}" class="btn btn-default"><i class="fa fa-edit"></i></a>
+                  {if="$value.isBloqueado == 0"}
+                  <a href="#" class="btn btn-success"><i class="fa fa-check"></i></a>
+                  {else}
+                  <a href="#" class="btn btn-danger"><i class="fa fa-ban"></i></a>
+                  {/if}
+                </td>
+              </tr>
+              {/loop}
+            </tbody>
+          </table>
+        </div>
       </div>
       <!--Fim box body-->
     </div>
