--- a/App/Views/site/ocorrencia-arquivos.html
+++ b/App/Views/site/ocorrencia-arquivos.html
@@ -30,13 +30,14 @@
 
             <div class="row lateral-superior">
               <div class="col-md-12">
-                <label><input type="checkbox" name="selecionaTudo" value="0"> Seleciona Tudo</label>
+                <label><input type="checkbox" name="selecionaTudo" value="0" onclick="marcarTodos(this.checked);"> 
+                <span id="acao">Marcar Todos</span></label>
               </div>
             </div>
 
             {loop="$arquivos"}
             <a href="{$value.url}" target="name-iframe"><li class="list-group-item documento">
-              <input type="checkbox" name="documento" value="{$value.idArquivo}"> {$value.tipo}
+              <input type="checkbox" name="documento[]" value="{$value.idArquivo}"> {$value.tipo}
             </li></a>
             {/loop}
 
@@ -60,5 +61,23 @@
     <script src="/res/site/dist/js/bootstrap4/jquery-3.3.1.slim.min.js"></script>
     <script src="/res/site/dist/js/bootstrap4/popper.min.js"></script>
     <script src="/res/site/dist/js/bootstrap4/bootstrap.min.js"></script>
+
+    <script>
+    function marcarTodos(marcar){
+        var itens = document.getElementsByName('documento[]');
+
+        if(marcar){
+            document.getElementById('acao').innerHTML = 'Desmarcar Todos';
+        }else{
+            document.getElementById('acao').innerHTML = 'Marcar Todos';
+        }
+
+        var i = 0;
+        for(i=0; i<itens.length;i++){
+            itens[i].checked = marcar;
+        }
+    }
+    </script>
+
   </body>
 </html>
