Adicionando botoes de voltar para pagina anterior

--- a/App/Views/site/ocorrencia-responsavel-vitima-lista.html
+++ b/App/Views/site/ocorrencia-responsavel-vitima-lista.html
@@ -24,6 +24,7 @@
         <div class="row">
           <div class="col-md-12">
             <a href="/ocorrencia-responsavel-vitima-cadastrar/{$responsavel.0.idVitimasApuracao}/{$responsavel.0.idOcorrencia}" class="btn btn-success">Novo Responsavel</a>
+            <a href="/ocorrencia-vitimas/{$responsavel.0.idVitimasApuracao}/{$responsavel.0.idOcorrencia}" class="btn btn-primary">Voltar</a>
           </div>          
         </div>
         <!--Fim Row-->
