--- a/App/Views/site/ocorrencia-vitima-editar.html
+++ b/App/Views/site/ocorrencia-vitima-editar.html
@@ -246,6 +246,7 @@
           <div class="row">
             <div class="col-md-12">
               <input type="submit" class="btn btn-primary pull-right margin" id="botaoEnviar" value="Editar">
+              <a href="/ocorrencia-vitimas/{$vitima.0.idVitimasApuracao}/{$vitima.0.idOcorrencia}" class="btn btn-primary pull-left margin">Voltar</a> 
             </div>            
           </div>
           <!--Fim Row-->
