--- a/App/Views/site/ocorrencia-vitimas.html
+++ b/App/Views/site/ocorrencia-vitimas.html
@@ -84,6 +84,8 @@
 
             <a href="/ocorrencia-vitima-acompanhamento/{$value.idVitimasApuracao}/{$value.idOcorrencia}" class="btn btn-app"><i class="fa fa-eye"></i>Acompanhamento</a>
 
+            <a href="/ocorrencia-vitimas-lista/{$value.idOcorrencia}" class="btn btn-app"><i class="fa fa-arrow-left"></i>Voltar</a>
+
             {/if}
             {/loop}
           </div>
