--- a/App/Views/site/usuarios-detalhe-editar.html
+++ b/App/Views/site/usuarios-detalhe-editar.html
@@ -349,6 +349,7 @@
             <div class="row">
               <div class="col-md-12">
                 <input type="submit" class="btn btn-primary pull-right margin" id="botaoEnviar" value="Editar">
+                <a href="/usuarios-detalhe/{$dadosUsuario.idUsuario}" class="btn btn-primary pull-left margin">Voltar</a> 
               </div>            
             </div>
             <!--Fim Row-->
