--- a/App/Views/site/ocorrencia-agressor.html
+++ b/App/Views/site/ocorrencia-agressor.html
@@ -25,6 +25,7 @@
           <div class="col-md-6">
             <a href="/ocorrencia-agressor-cadastrar/{$idOcorrencia}" class="btn btn-app"><i class="fa fa-user-plus"></i>Novo Agressor</a>          
             <a href="/ocorrencia-agressor-enviar-arquivo/{$idOcorrencia}" class="btn btn-app"><i class="fa fa-file-pdf-o"></i>Enviar Documentos</a>
+            <a href="/ocorrencia-detalhe/{$idOcorrencia}" class="btn btn-app"><i class="fa fa-arrow-left"></i>Voltar</a>
           </div>          
         </div>
         <!--Fim Row-->
