--- a/App/Views/site/ocorrencia-descricao.html
+++ b/App/Views/site/ocorrencia-descricao.html
@@ -23,7 +23,8 @@
         <!--Row-->
         <div class="row">
           <div class="col-md-12">
-            <a href="/ocorrencia-descricao-editar/{$idOcorrencia}" class="btn btn-app"><i class="fa fa-edit"></i>Editar</a>          
+            <a href="/ocorrencia-descricao-editar/{$idOcorrencia}" class="btn btn-app"><i class="fa fa-edit"></i>Editar</a> 
+            <a href="/ocorrencia-detalhe/{$idOcorrencia}" class="btn btn-app"><i class="fa fa-arrow-left"></i>Voltar</a>       
           </div>          
         </div>
         <!--Fim Row-->
