--- a/App/Views/site/ocorrencia-solicitacao.html
+++ b/App/Views/site/ocorrencia-solicitacao.html
@@ -15,7 +15,8 @@
     <section class="content">
       <div class="row">
         <div class="col-md-3">
-          <a href="/ocorrencia-nova-solicitacao/{$idOcorrencia}" class="btn btn-primary btn-block margin-bottom">Nova Solicitação</a>
+          <a href="/ocorrencia-nova-solicitacao/{$idOcorrencia}" class="btn btn-primary btn-block">Nova Solicitação</a>
+          <a href="/ocorrencia-detalhe/{$idOcorrencia}" class="btn btn-primary btn-block margin-bottom">Voltar</a>
 
           <div class="box box-solid">
             <div class="box-header with-border">
