--- a/App/Views/site/ocorrencia-vitima-enviar-arquivo-lista.html
+++ b/App/Views/site/ocorrencia-vitima-enviar-arquivo-lista.html
@@ -24,6 +24,7 @@
         <div class="row">
           <div class="col-md-12">
             <a href="/ocorrencia-vitima-enviar-arquivo-cadastrar/{$idVitima}/{$idOcorrencia}" class="btn btn-success">Novo Documento</a>
+            <a href="/ocorrencia-vitimas/{$idVitima}/{$idOcorrencia}" class="btn btn-primary">Voltar</a>
           </div>          
         </div>
         <!--Fim Row-->
