--- a/App/Views/site/usuarios-detalhe.html
+++ b/App/Views/site/usuarios-detalhe.html
@@ -115,6 +115,8 @@
 
             <a href="/usuarios-alterar-senha/senha/{$detalheUsuario.idUsuario}" class="btn btn-app"><i class="fa fa-lock"></i>Alterar Senha</a>
 
+            <a href="/usuarios-lista" class="btn btn-app"><i class="fa fa-arrow-left"></i>Voltar</a>
+
           </div>
         </div>
         <!--Fim Row-->
