Adicionando botoes de voltar a pagina anterior em paginas que ficaram sem

--- a/App/Views/site/ocorrencia-responsavel-vitima-cadastrar.html
+++ b/App/Views/site/ocorrencia-responsavel-vitima-cadastrar.html
@@ -274,6 +274,7 @@
           <div class="row">
             <div class="col-md-12">
               <input type="submit" class="btn btn-primary pull-right margin" id="botaoEnviar" value="Salvar">
+              <a href="/ocorrencia-responsavel-vitima-lista/{$idVitima}/{$idOcorrencia}" class="btn btn-primary pull-left margin">Voltar</a>
             </div>            
           </div>
           <!--Fim Row-->
