--- a/App/Views/site/ocorrencia-agressor-cadastrar.html
+++ b/App/Views/site/ocorrencia-agressor-cadastrar.html
@@ -439,6 +439,7 @@
           <div class="row">
             <div class="col-md-12">
               <input type="submit" class="btn btn-primary pull-right margin" id="botaoEnviar" value="Salvar">
+              <a href="/ocorrencia-agressor/{$idOcorrencia}" class="btn btn-primary pull-left">Voltar</a>
             </div>            
           </div>
           <!--Fim Row-->
