--- a/App/Views/site/ocorrencia-agressor-enviar-arquivo.html
+++ b/App/Views/site/ocorrencia-agressor-enviar-arquivo.html
@@ -24,6 +24,7 @@
         <div class="row">
           <div class="col-md-12">
             <a href="/ocorrencia-agressor-enviar-arquivo-cadastrar/{$idOcorrencia}" class="btn btn-success">Novo Documento</a>
+            <a href="/ocorrencia-agressor/{$idOcorrencia}" class="btn btn-primary">Voltar</a>
           </div>          
         </div>
         <!--Fim Row-->
