PDF Agressor Novo, Editar, Excluir

--- a/App/Views/site/agressor-descartar.html
+++ b/App/Views/site/agressor-descartar.html
@@ -21,7 +21,7 @@
       <!-- /.box-header -->
       <div class="box-body">
 
-        <form action="/ocorrencia-agressor-excluir/{$idOcorrencia}/{$isInstituicao}/{agressor.0.$idOcorrenciaAgressor}/{$agressor.0.idAgressor}" method="post">
+        <form action="/ocorrencia-agressor-excluir/{$idOcorrencia}/{$isInstituicao}/{$idOcorrenciaAgressor}/{$agressor.0.idAgressor}" method="post">
           
           <!--Inicio row-->
           <div class="row">
