--- a/App/Views/site/ocorrencia-instituicao-editar.html
+++ b/App/Views/site/ocorrencia-instituicao-editar.html
@@ -199,6 +199,7 @@
           <div class="row">
             <div class="col-md-12">
               <input type="submit" class="btn btn-primary pull-right margin" id="botaoEnviar" value="Editar">
+              <a href="/ocorrencia-agressor/{$agressor.0.idOcorrencia}" class="btn btn-primary pull-left margin">Voltar</a> 
             </div>            
           </div>
           <!--Fim Row-->
