PDF Responder Solicitacao, Arquivar, Encerrar e Reabrir Ocorrencia

--- a/App/Views/site/ler-solicitacao.html
+++ b/App/Views/site/ler-solicitacao.html
@@ -72,7 +72,7 @@
           <div class="box-footer">
             {if="$value.isResposta == '0'"}
             <div class="pull-right">
-              <a href="/solicitacao-responder/{$value.idSolicitacao}/{$value.isInstituicao}" class="btn btn-default"><i class="fa fa-reply"></i> Responder</a>
+              <a href="/solicitacao-responder/{$value.idSolicitacao}/{$value.isInstituicao}/{$value.idOcorrencia}" class="btn btn-default"><i class="fa fa-reply"></i> Responder</a>
             </div>
             {/if}
             <button type="button" id="btn" class="btn btn-default"><i class="fa fa-print"></i> Print</button>
