--- a/App/Views/site/solicitacao-responder.html
+++ b/App/Views/site/solicitacao-responder.html
@@ -38,7 +38,7 @@
         </div>
         <!-- /.col -->
 
-        <form action="/solicitacao-responder/{$idSolicitacao}/{$isInstituicao}" method="post">
+        <form action="/solicitacao-responder/{$idSolicitacao}/{$isInstituicao}/{$idOcorrencia}" method="post">
 
           <div class="col-md-9">
             <div class="box box-primary">
