--- a/App/Views/site/ocorrencia-detalhe.html
+++ b/App/Views/site/ocorrencia-detalhe.html
@@ -65,6 +65,8 @@
             
             <a href="" class="btn btn-app" onclick="open('/ocorrencia-arquivos/{$detalheOcorrencia.0.idOcorrencia}','','status=no,Width=1000,Height=600');"><i class="fa fa-folder"></i>Arquivos</a>
 
+            <a href="/ocorrencia-arquivo-externo/{$detalheOcorrencia.0.idOcorrencia}" class="btn btn-app"><i class="fa fa-upload"></i>Enviar Arquivo</a>
+
             <a href="/ocorrencia-solicitacao/{$detalheOcorrencia.0.idOcorrencia}" class="btn btn-app"><i class="fa fa-envelope"></i>Solicitação</a>
             <a onclick="confirmarArquivar();" class="btn btn-app"><i class="fa fa-inbox"></i>Arquivar</a>
             <a onclick="confirmarEncerrar();" class="btn btn-app"><i class="fa fa-archive"></i>Encerrar</a>
@@ -76,6 +78,8 @@
             <a href="/ocorrencia-descricao/{$detalheOcorrencia.0.idOcorrencia}" class="btn btn-app"><i class="fa fa-list-alt"></i>Descrição</a>
             
             <a href="" class="btn btn-app" onclick="open('/ocorrencia-arquivos/{$detalheOcorrencia.0.idOcorrencia}','','status=no,Width=1000,Height=600');"><i class="fa fa-folder"></i>Arquivos</a>
+
+            <a href="/ocorrencia-arquivo-externo/{$detalheOcorrencia.0.idOcorrencia}" class="btn btn-app"><i class="fa fa-upload"></i>Enviar Arquivo</a>
 
             <a href="/ocorrencia-solicitacao/{$detalheOcorrencia.0.idOcorrencia}" class="btn btn-app"><i class="fa fa-envelope"></i>Solicitação</a>
             <a onclick="confirmarArquivar();" class="btn btn-app"><i class="fa fa-inbox"></i>Arquivar</a>
