Notificação do Sistema para os conselheiros e para quem vai receber as solicitações

--- a/App/Views/site/header.html
+++ b/App/Views/site/header.html
@@ -93,101 +93,88 @@ desired effect
       <!-- Navbar Right Menu -->
       <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
-          <!-- Messages: style can be found in dropdown.less-->
-          <li class="dropdown messages-menu">
-            <!-- Menu toggle button -->
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <i class="fa fa-envelope-o"></i>
-              <span class="label label-success">4</span>
-            </a>
-            <ul class="dropdown-menu">
-              <li class="header">You have 4 messages</li>
-              <li>
-                <!-- inner menu: contains the messages -->
-                <ul class="menu">
-                  <li><!-- start message -->
-                    <a href="#">
-                      <div class="pull-left">
-                        <!-- User Image -->
-                        <img src="/res/site/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                      </div>
-                      <!-- Message title and timestamp -->
-                      <h4>
-                        Support Team
-                        <small><i class="fa fa-clock-o"></i> 5 mins</small>
-                      </h4>
-                      <!-- The message -->
-                      <p>Why not buy a new awesome theme?</p>
-                    </a>
-                  </li>
-                  <!-- end message -->
-                </ul>
-                <!-- /.menu -->
-              </li>
-              <li class="footer"><a href="#">See All Messages</a></li>
-            </ul>
-          </li>
-          <!-- /.messages-menu -->
+          
+          {$conselho = 0}
+          {$outro = 0}
+
+          {loop="$notificacao"}
+
+            {if="$value.idUsuario == null"}
+              {$conselho += 1}
+            {/if}
+            
+            {if="$value.idUsuario != null"}
+            {if="$nivelAcesso == 2"}
+            {if="$value.idUsuario == $idUser"}
+              {$outro += 1}
+            {/if}
+            {/if}
+            {/if}
+
+          {/loop}
 
           <!-- Notifications Menu -->
           <li class="dropdown notifications-menu">
             <!-- Menu toggle button -->
+            {if="$nivelAcesso == 4"}
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <i class="fa fa-bell-o"></i>
-              <span class="label label-warning">10</span>
+              <span class="label label-warning">{$conselho}</span>
             </a>
+            {/if}
+
+            {if="$nivelAcesso == 2"}
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <i class="fa fa-bell-o"></i>
+              <span class="label label-warning">{$outro}</span>
+            </a>
+            {/if}
+
             <ul class="dropdown-menu">
-              <li class="header">You have 10 notifications</li>
+
+              {if="$nivelAcesso == 4"}
+              <li class="header">Você tem {$conselho} notificação(s)</li>
+              {/if}
+
+              {if="$nivelAcesso == 2"}
+              <li class="header">Você tem {$outro} notificação(s)</li>
+              {/if}
+
               <li>
                 <!-- Inner Menu: contains the notifications -->
                 <ul class="menu">
+                  {loop="$notificacao"}
+
+                  {if="$value.idUsuario == null"}
+                  {if="$nivelAcesso == 4"}
                   <li><!-- start notification -->
-                    <a href="#">
-                      <i class="fa fa-users text-aqua"></i> 5 new members joined today
+                    <a href="/excluir-notificacao/{$value.idNotificacoes}/{$value.url}">
+                      <small><i class="fa fa-clock-o"></i> {$value.dataRegistro}</small> 
+                      <br><strong>{$value.tipo}</strong>
                     </a>
-                  </li>
-                  <!-- end notification -->
-                </ul>
-              </li>
-              <li class="footer"><a href="#">View all</a></li>
-            </ul>
-          </li>
-          <!-- Tasks Menu -->
-          <li class="dropdown tasks-menu">
-            <!-- Menu Toggle Button -->
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <i class="fa fa-flag-o"></i>
-              <span class="label label-danger">9</span>
-            </a>
-            <ul class="dropdown-menu">
-              <li class="header">You have 9 tasks</li>
-              <li>
-                <!-- Inner menu: contains the tasks -->
-                <ul class="menu">
-                  <li><!-- Task item -->
-                    <a href="#">
-                      <!-- Task title and progress text -->
-                      <h3>
-                        Design some buttons
-                        <small class="pull-right">20%</small>
-                      </h3>
-                      <!-- The progress bar -->
-                      <div class="progress xs">
-                        <!-- Change the css width attribute to simulate progress -->
-                        <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                          <span class="sr-only">20% Complete</span>
-                        </div>
-                      </div>
+                  </li><!-- end notification -->
+                  {/if}
+                  {/if}
+
+                  {if="$value.idUsuario != null"}
+                  {if="$nivelAcesso == 2"}
+                  {if="$value.idUsuario == $idUser"}
+                  <li><!-- start notification -->
+                    <a href="/excluir-notificacao/{$value.idNotificacoes}/{$value.url}">
+                      <small><i class="fa fa-clock-o"></i> {$value.dataRegistro}</small> 
+                      <br><strong>{$value.tipo}</strong>
                     </a>
-                  </li>
-                  <!-- end task item -->
+                  </li><!-- end notification -->
+                  {/if}
+                  {/if}
+                  {/if}
+
+                  {/loop}
                 </ul>
-              </li>
-              <li class="footer">
-                <a href="#">View all tasks</a>
               </li>
             </ul>
           </li>
+          
           <!-- User Account Menu -->
           <li class="dropdown user user-menu">
             <!-- hidden-xs hides the username on small devices so only the image appears. -->
