--- a/App/Views/site/header.html
+++ b/App/Views/site/header.html
@@ -116,7 +116,7 @@ desired effect
           <!-- Notifications Menu -->
           <li class="dropdown notifications-menu">
             <!-- Menu toggle button -->
-            {if="$nivelAcesso == 4"}
+            {if="$nivelAcesso == 4  OR $nivelAcesso == 2210"}
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <i class="fa fa-bell-o"></i>
               <span class="label label-warning">{$conselho}</span>
@@ -132,7 +132,7 @@ desired effect
 
             <ul class="dropdown-menu">
 
-              {if="$nivelAcesso == 4"}
+              {if="$nivelAcesso == 4  OR $nivelAcesso == 2210"}
               <li class="header">Você tem {$conselho} notificação(s)</li>
               {/if}
 
@@ -146,7 +146,7 @@ desired effect
                   {loop="$notificacao"}
 
                   {if="$value.idUsuario == null"}
-                  {if="$nivelAcesso == 4"}
+                  {if="$nivelAcesso == 4  OR $nivelAcesso == 2210"}
                   <li><!-- start notification -->
                     <a href="/excluir-notificacao/{$value.idNotificacoes}/{$value.url}">
                       <small><i class="fa fa-clock-o"></i> {$value.dataRegistro}</small> 
@@ -211,6 +211,7 @@ desired effect
         <!--Criar Apuracao-->
         <li><a href="/criar-apuracao"><i class="fa fa-file"></i> <span>Criar Apuração</span></a></li>
 
+        {if="$nivelAcesso == 4 OR $nivelAcesso == 2210"}
         <!--Criar Apuracao-->
         <li class="treeview">
           <a href="#"><i class="fa fa-file-text"></i> <span>Apurações</span>
@@ -224,7 +225,9 @@ desired effect
           </ul>
         </li>
         <!--Fim Criar Apuracao-->
+        {/if}
 
+        {if="$nivelAcesso == 4 OR $nivelAcesso == 2210"}
         <!--Inicio Ocorrencia-->
         <li class="treeview">
           <a href="#"><i class="fa fa-th-large"></i> <span>Ocorrências</span>
@@ -240,10 +243,14 @@ desired effect
           </ul>
         </li>
         <!--Fim Ocorrencia-->
+        {/if}
         
+        {if="$nivelAcesso == 2 OR $nivelAcesso == 2210"}
         <!--Solicitacoes-->
         <li><a href="/solicitacoes"><i class="fa fa-envelope"></i> <span>Solicitações</span></a></li>
+        {/if}
 
+        {if="$nivelAcesso == 3 OR $nivelAcesso == 2210"}
         <!--Inicio Usuario-->
         <li class="treeview">
           <a href="#"><i class="fa fa-user"></i> <span>Usuários</span>
@@ -257,7 +264,9 @@ desired effect
           </ul>
         </li>
         <!--Fim Usuario-->
+        {/if}
 
+        {if="$nivelAcesso == 5 OR $nivelAcesso == 2210"}
         <!--Status Servidor-->
         <li><a href="/pesquisar-pessoa"><i class="fa fa-search"></i> <span>Pesquisar Pessoa</span></a></li>
 
@@ -266,6 +275,7 @@ desired effect
 
         <!--Backup-->
         <li><a href="/backup"><i class="fa fa-save"></i> <span>Backup</span></a></li>
+        {/if}
 
         <!--Inicio Documentacao-->
         <li><a href="/biblioteca"><i class="fa fa-book"></i> <span>Biblioteca</span></a></li>        
