Arrumando Acompanhamento, Editar Responsavel

--- a/App/Views/site/ocorrencia-responsavel-vitima-editar.html
+++ b/App/Views/site/ocorrencia-responsavel-vitima-editar.html
@@ -123,7 +123,7 @@
                 <div class="form-group">
                   <input type="hidden" id="id-sexo-hidden-responsavel" value="{$value.sexoResponsavel}">
                   <label for="id-sexo-responsavel">Sexo</label>
-                  <select class="form-control select2" name="sexoResponsavel" id="id-sexo-responsavel">
+                  <select class="form-control select2" name="sexoResponsavel" id="id-sexo-responsavel" required>
                     <option value="m">Masculino</option>
                     <option value="f">Feminino</option>
                   </select>
