--- a/App/Views/site/ocorrencia-agressor-enviar-arquivo-cadastrar.html
+++ b/App/Views/site/ocorrencia-agressor-enviar-arquivo-cadastrar.html
@@ -40,8 +40,7 @@
             <div class="col-md-12">
               <div class="form-group">
                 <label for="id-selecione-pessoa">Selecione a pessoa</label>
-                <select class="form-control select2" name="selecionePessoa" id="id-selecione-pessoa">
-                  <option checked>--- Selecione uma pessoa ---</option>
+                <select class="form-control select2" name="selecionePessoa" id="id-selecione-pessoa" required>
                   {loop="$selecionaPessoa"}
                   <option value="{$value.isInstituicao}-{$value.id}">{$value.nome}</option>
                   {/loop}
