--- a/App/Views/site/ocorrencia-detalhe.html
+++ b/App/Views/site/ocorrencia-detalhe.html
@@ -87,12 +87,12 @@
             {/if}
 
             {if="$detalheOcorrencia.0.statusOcorrencia == 3"}
-            <a href="/ocorrencia-arquivos" class="btn btn-app"><i class="fa fa-folder"></i>Arquivos</a>
+            <a onclick="open('/ocorrencia-arquivos/{$detalheOcorrencia.0.idOcorrencia}','','status=no,Width=1000,Height=600');" class="btn btn-app"><i class="fa fa-folder"></i>Arquivos</a>
             <a onclick="confirmarReabrir();" class="btn btn-app"><i class="fa fa-inbox"></i>Reabrir</a>
             {/if}
 
             {if="$detalheOcorrencia.0.statusOcorrencia == 4"}
-            <a href="/ocorrencia-arquivos" class="btn btn-app"><i class="fa fa-folder"></i>Arquivos</a>
+            <a onclick="open('/ocorrencia-arquivos/{$detalheOcorrencia.0.idOcorrencia}','','status=no,Width=1000,Height=600');" class="btn btn-app"><i class="fa fa-folder"></i>Arquivos</a>
             <a onclick="confirmarReabrir();" class="btn btn-app"><i class="fa fa-inbox"></i>Reabrir</a>
             {/if}
 
