Correção de Template

--- a/App/Views/site/ocorrencia-ler-solicitacao.html
+++ b/App/Views/site/ocorrencia-ler-solicitacao.html
@@ -16,7 +16,7 @@
     <div class="row">
       <div class="col-md-3">
         <a href="/ocorrencia-nova-solicitacao/{$idOcorrencia}" class="btn btn-primary btn-block">Nova Solicitação</a>
-          <a href="/ocorrencia-detalhe/{$idOcorrencia}" class="btn btn-primary btn-block margin-bottom">Voltar</a>
+          <a href="/ocorrencia-solicitacao/{$idOcorrencia}" class="btn btn-primary btn-block margin-bottom">Voltar</a>
 
         <div class="box box-solid">
           <div class="box-header with-border">
