--- a/App/Views/site/ocorrencia-solicitacao.html
+++ b/App/Views/site/ocorrencia-solicitacao.html
@@ -63,7 +63,7 @@
                     <td><a href="/ocorrencia-ler-solicitacao/{$idOcorrencia}/{$value.idSolicitacao}/0"><i class="fa fa-inbox"></i></a></td>
                     <td class="mailbox-name"><a href="/ocorrencia-ler-solicitacao/{$idOcorrencia}/{$value.idSolicitacao}/0">{$value.funcaoDestinatario} </a></td>
                     {/if}
-                    <td class="mailbox-subject" style="overflow: hidden; max-width:500px; text-overflow: ellipsis; white-space:nowrap;"><b>{$value.assunto}</b> - {$value.mensagem} {$value.mensagem}
+                    <td class="mailbox-subject" style="overflow: hidden; max-width:500px; text-overflow: ellipsis; white-space:nowrap;"><b>{$value.assunto}</b> - {$value.mensagem}
                     </td>
                     <td class="mailbox-date">{$value.dataCriacao}</td>
                   </tr>
