--- a/App/Views/site/ocorrencia-detalhe.html
+++ b/App/Views/site/ocorrencia-detalhe.html
@@ -59,10 +59,13 @@
           <div class="col-md-12">
             
             {if="$detalheOcorrencia.0.statusOcorrencia == 1"}
+            {if="$nivelAcesso == 4 OR $nivelAcesso == 2210"}
             <a href="/ocorrencia-vitimas-lista/{$detalheOcorrencia.0.idOcorrencia}" class="btn btn-app"><i class="fa fa-user"></i>Vítimas</a>
             <a href="/ocorrencia-agressor/{$detalheOcorrencia.0.idOcorrencia}" class="btn btn-app"><i class="fa fa-user"></i>Agressor</a>
             <a href="/ocorrencia-descricao/{$detalheOcorrencia.0.idOcorrencia}" class="btn btn-app"><i class="fa fa-list-alt"></i>Descrição</a>
-            
+            {/if}
+
+            {if="$nivelAcesso == 4 OR $nivelAcesso == 2210  OR $nivelAcesso == 3748"}
             <a href="" class="btn btn-app" onclick="open('/ocorrencia-arquivos/{$detalheOcorrencia.0.idOcorrencia}','','status=no,Width=1000,Height=600');"><i class="fa fa-folder"></i>Arquivos</a>
 
             <a href="/ocorrencia-arquivo-externo/{$detalheOcorrencia.0.idOcorrencia}" class="btn btn-app"><i class="fa fa-upload"></i>Enviar Arquivo</a>
@@ -71,29 +74,44 @@
             <a onclick="confirmarArquivar();" class="btn btn-app"><i class="fa fa-inbox"></i>Arquivar</a>
             <a onclick="confirmarEncerrar();" class="btn btn-app"><i class="fa fa-archive"></i>Encerrar</a>
             {/if}
+            {/if}
             
+            <!------------------------------------------------------------------------------------>
+
             {if="$detalheOcorrencia.0.statusOcorrencia == 2"}
+            {if="$nivelAcesso == 4 OR $nivelAcesso == 2210"}
             <a href="/ocorrencia-vitimas-lista/{$detalheOcorrencia.0.idOcorrencia}" class="btn btn-app"><i class="fa fa-user"></i>Vítimas</a>
             <a href="/ocorrencia-agressor/{$detalheOcorrencia.0.idOcorrencia}" class="btn btn-app"><i class="fa fa-user"></i>Agressor</a>
             <a href="/ocorrencia-descricao/{$detalheOcorrencia.0.idOcorrencia}" class="btn btn-app"><i class="fa fa-list-alt"></i>Descrição</a>
-            
+            {/if}
+
+            {if="$nivelAcesso == 4 OR $nivelAcesso == 2210  OR $nivelAcesso == 3748"}
             <a href="" class="btn btn-app" onclick="open('/ocorrencia-arquivos/{$detalheOcorrencia.0.idOcorrencia}','','status=no,Width=1000,Height=600');"><i class="fa fa-folder"></i>Arquivos</a>
 
             <a href="/ocorrencia-arquivo-externo/{$detalheOcorrencia.0.idOcorrencia}" class="btn btn-app"><i class="fa fa-upload"></i>Enviar Arquivo</a>
 
             <a href="/ocorrencia-solicitacao/{$detalheOcorrencia.0.idOcorrencia}" class="btn btn-app"><i class="fa fa-envelope"></i>Solicitação</a>
             <a onclick="confirmarArquivar();" class="btn btn-app"><i class="fa fa-inbox"></i>Arquivar</a>
-            <a onclick="confirmarEncerrar();" class="btn btn-app"><i class="fa fa-archive"></i>Encerrar</a>
+            <a onclick="confirmarEncerrar();" class="btn btn-app"><i class="fa fa-archive"></i>Encerrar</a>            
             {/if}
+            {/if}
+
+            <!------------------------------------------------------------------------------------>
 
             {if="$detalheOcorrencia.0.statusOcorrencia == 3"}
+            {if="$nivelAcesso == 4 OR $nivelAcesso == 2210  OR $nivelAcesso == 3748"}
             <a onclick="open('/ocorrencia-arquivos/{$detalheOcorrencia.0.idOcorrencia}','','status=no,Width=1000,Height=600');" class="btn btn-app"><i class="fa fa-folder"></i>Arquivos</a>
             <a onclick="confirmarReabrir();" class="btn btn-app"><i class="fa fa-inbox"></i>Reabrir</a>
             {/if}
+            {/if}
+
+            <!------------------------------------------------------------------------------------>
 
             {if="$detalheOcorrencia.0.statusOcorrencia == 4"}
+            {if="$nivelAcesso == 4 OR $nivelAcesso == 2210  OR $nivelAcesso == 3748"}
             <a onclick="open('/ocorrencia-arquivos/{$detalheOcorrencia.0.idOcorrencia}','','status=no,Width=1000,Height=600');" class="btn btn-app"><i class="fa fa-folder"></i>Arquivos</a>
             <a onclick="confirmarReabrir();" class="btn btn-app"><i class="fa fa-inbox"></i>Reabrir</a>
+            {/if}
             {/if}
 
           </div>
